syntax = "proto3";
package ie.gmit.ds;
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "ie.gmit.ds";

service InventoryService {
	rpc hash(Hash) returns (HashResponse);
	rpc validate(Validate) returns (google.protobuf.BoolValue);
}
message Hash {
    int32 userId = 1;
    string password = 2;
}

message HashResponse {
    int32 userId = 1;
    bytes hashPassword=2;
    bytes salt = 3;
}

message Validate{
	string password =1;
	bytes hashedPassword =2;
	bytes salt =3;
	
}
